# augmented-gpt

./: .gitignore  PLUGINS.md  README.md  pyproject.toml  test.ipynb
.github/workflows/: pypi-publish.yml  type-check.yml
agentia/: __init__.py  agent.py  augmented_gpt.py  decorators.py  history.py  knowledge_base.py  main.py  message.py  retrieval.py  tools.py
agentia/llm/: __init__.py  deepseek.py  openai.py  openrouter.py
agentia/plugins/: __init__.py  calc.py  clock.py  code.py  dalle.py  memory.py  mstodo.py  search.py  vision.py  web.py
agentia/utils/: __init__.py  config.py  gpts.py  image.py  repl.py  server.py  voice.py
agentia/utils/retrieval/: retriever.py  vector_store.py
augmented_gpt/: __init__.py  assistant.py  augmented_gpt.py  decorators.py  history.py  message.py  tools.py
augmented_gpt/gpt/: __init__.py  assistant.py  chat.py
augmented_gpt/llm/: __init__.py  mistral.py  openai.py  openrouter.py
augmented_gpt/plugins/: __init__.py  calc.py  memory.py
augmented_gpt/utils/: __init__.py  assistants.py  auth.html  gpts.py  image.py  stt.py  tts.py  voice.py
examples/: example.ipynb
tests/: test_assistant.py  test_async.py  test_async_func.py  test_completion.py  test_completion_async.py  test_completion_sync.py  test_image.py  test_plugin.py  test_simple.py  test_stream.py  test_stream_async.py  test_stream_sync.py  test_tools.py  test_tools_async.py  test_tts_stt.py  test_vision.py  test_voice.py
