[tool.poetry]
name = "agentia"
version = "0.0.1"
description = "ChatGPT powered agents, argumented with tools"
authors = ["Wenyu Zhao <wenyuzhaox@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wenyuzhao/augmented-gpt"
packages = [{ include = "agentia" }]
keywords = ["chatgpt", "gpt"]

[tool.poetry.scripts]
agentia = "agentia.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dotenv = "^1.0.0"
openai = "^1.21.2"
aiohttp = "^3.9.3"
jinja2 = "^3.1.3"
pillow = "^10.2.0"
pyright = "^1.1.361"
requests = "^2.31.0"
pyyaml = "^6.0.2"
typer = "^0.12.5"
pymstodo = "^0.2.0"
rich = "^13.9.3"
fastapi = "^0.115.3"
websockets = "^13.1"
uvicorn = "^0.32.0"
llama-index = "^0.11.20"
llama-index-vector-stores-chroma = "^0.2.1"
python-slugify = "^8.0.4"
tiktoken = "^0.8.0"
dataforseo-client = "^1.0.34"
markdownify = "^0.13.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
