[project]
name = "agentia"
version = "0.0.2"
description = "ChatGPT powered agents, argumented with tools"
authors = [{ name = "Wenyu Zhao", email = "wenyuzhaox@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = ["chatgpt", "gpt"]
dependencies = [
    "python-dotenv>=1.0.0,<2",
    "openai>=1.58.1,<2",
    "aiohttp>=3.9.3,<4",
    "jinja2>=3.1.3,<4",
    "pillow>=10.2.0,<11",
    "pyright>=1.1.361,<2",
    "requests>=2.31.0,<3",
    "pyyaml>=6.0.2,<7",
    "typer>=0.12.5,<0.13",
    "pymstodo>=0.2.0,<0.3",
    "rich>=13.9.3,<14",
    "fastapi>=0.115.3,<0.116",
    "websockets~=13.1",
    "uvicorn>=0.32.0,<0.33",
    "llama-index>=0.12.9,<0.13",
    "llama-index-vector-stores-chroma>=0.4.1,<0.5",
    "python-slugify>=8.0.4,<9",
    "tiktoken>=0.8.0,<0.9",
    "dataforseo-client>=1.0.34,<2",
    "markdownify>=0.13.1,<0.14",
    "nltk>=3.9.1,<4",
]

[project.urls]
Repository = "https://github.com/wenyuzhao/agentia"

[project.scripts]
agentia = "agentia.main:main"

[dependency-groups]
dev = [
    "ipykernel>=6.23.2,<7",
    "pytest>=7.3.2,<8",
    "pytest-asyncio>=0.21.1,<0.22",
]

[tool.hatch.build.targets.sdist]
include = ["agentia"]

[tool.hatch.build.targets.wheel]
include = ["agentia"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
